--- a/ignore.conf
+++ b/ignore.conf
@@ -292,3 +292,6 @@ PluginUtility.cs.meta
 ProjectSettingAttribute.cs.meta
 !manifest.json.private.0
 !packages-lock.json.private.0
+.git
+.idea
+.gitignore
